# plandelta-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CODEX_PROMPT.md  HANDOFF.md  LICENSE  MANIFEST.md  PHASES.md  PHASES_AGENTIC_V0_2.md  PLAN.md  PLAN_AGENTIC_V0_2.md  README.md  START_AGENTIC_V0_2.md  START_HERE.md  docker-compose.local-aws.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.base.json  turbo.json
.github/: dependabot.yml
apps/agent/: Dockerfile  package.json  pyproject.toml
apps/agent/evals/: test_evaluation_harness.py  thresholds-v0.2.json
apps/agent/evals/datasets/: release-v0.2.jsonl
apps/agent/evals/fixtures/: ocr-injection.txt  rfi-injection.txt  spec-injection.txt
apps/agent/evals/results/: release-v0.2.json  release-v0.2.md
apps/agent/plandelta_agent/: __init__.py  auth.py  config.py  evaluation.py  execution.py  main.py  profiles.py  retrieval.py  runtime.py  telemetry.py
apps/agent/plandelta_agent/agents/: __init__.py  specialists.py  supervisor.py
apps/agent/plandelta_agent/graph/: __init__.py  persistence.py  synthesis.py  verifier.py  workflow.py
apps/agent/plandelta_agent/guardrails/: __init__.py  budgets.py  input_policy.py
apps/agent/plandelta_agent/ingestion/: __init__.py  chunking.py  errors.py  extraction.py  processor.py  repository.py  storage.py  vision_ocr.py
apps/agent/tests/: test_agent_graph.py  test_agent_run_api.py  test_config_auth.py  test_contract_models.py  test_execution_telemetry.py  test_guardrails_routing.py  test_health.py  test_ingestion_api.py  test_ingestion_core.py  test_ingestion_processor.py  test_ingestion_storage.py  test_profiles.py  test_providers.py  test_rag_database_integration.py  test_specialists.py  test_tool_registry.py  test_verifier_policy.py  test_vision_ocr.py
apps/vision/: Dockerfile  package.json  pyproject.toml
apps/vision/models/: changed-region-classifier.json  changed-region-classifier.onnx
apps/vision/plandelta_vision/: __init__.py  alignment.py  artifacts.py  classify.py  config.py  differ.py  errors.py  image_io.py  main.py  models.py  ocr.py  onnx_classifier.py  pipeline.py  security.py
apps/vision/test/: test_document_ocr_api.py  test_health.py  test_input_security.py  test_internal_api.py  test_ocr.py  test_onnx_classifier.py  test_pipeline.py
(+257 files in other folders)
