[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "plandelta-agent"
version = "0.2.0"
description = "Bounded evidence-grounded orchestration and hybrid retrieval service."
requires-python = ">=3.12,<3.14"
dependencies = [
  "boto3>=1.40,<2",
  "fastapi>=0.124,<1",
  "fastembed>=0.8,<1",
  "httpx>=0.28,<1",
  "langgraph>=1.2,<2",
  "psycopg[binary]>=3.3,<4",
  "pydantic>=2.12,<3",
  "pypdf>=6.0,<7",
  "uvicorn[standard]>=0.38,<1"
]

[project.optional-dependencies]
dev = [
  "hatchling>=1.27",
  "mypy>=1.19,<2",
  "pytest>=9.0,<10",
  "ruff>=0.14,<1"
]

[tool.hatch.build.targets.wheel]
packages = ["plandelta_agent"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
markers = ["e2e: service-boundary smoke tests"]
testpaths = ["tests", "evals"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore.*", "fastembed.*", "langgraph.*", "uvicorn.*"]
ignore_missing_imports = true
